Checkpoint: Kemaskan app selesai: 1) Berbuka jadi Berbuka/Maghrib di jadual prayer times. 2) Complete English translation untuk semua pages (Settings, Prayer Times, Home, common). 3) Remove Arabic language - hanya MS dan EN tersedia. 4) Share button dengan text "Kongsi Aplikasi Ini" (MS) / "Share This Application" (EN) dan default message + link. 5) Semua 48 unit tests passed. App siap dengan countdown, prayer times, multi-language (MS/EN), notifications, dan share feature.

--- a/locales/en.json
+++ b/locales/en.json
@@ -7,31 +7,44 @@
     "seconds": "SECONDS"
   },
   "prayerTimes": {
-    "title": "Suhoor & Iftar Times",
-    "selectState": "Select State",
-    "selectZone": "Select Zone",
+    "title": "Prayer Times Schedule",
+    "selectState": "State",
+    "selectZone": "Zone",
     "imsak": "Suhoor",
-    "iftar": "Iftar"
+    "iftar": "Iftar/Maghrib",
+    "state": "State",
+    "zone": "Zone",
+    "day": "Day"
   },
   "settings": {
     "title": "Settings",
     "darkMode": "Dark Mode",
     "language": "Language",
     "notification": "Suhoor & Iftar Notifications",
-    "notificationStatus": "Active",
-    "notificationStatusOff": "Inactive",
+    "notificationStatus": "Enabled",
+    "notificationStatusOff": "Disabled",
     "notificationOn": "On",
     "notificationOff": "Off",
     "notificationBefore": "Alert before time:",
     "testNotification": "Test Notification",
-    "about": "About App",
-    "aboutText": "An app to count down the days, hours, minutes, and seconds until Ramadhan arrives.",
-    "exitApp": "Exit App",
-    "exitConfirm": "Are you sure you want to exit the app?"
+    "about": "About Application",
+    "aboutText": "An application to count the days, hours, minutes, and seconds until the month of Ramadhan arrives.",
+    "exitApp": "Exit Application",
+    "exitConfirm": "Are you sure you want to exit the application?",
+    "shareApp": "Share This Application"
+  },
+  "home": {
+    "title": "Ramadhan Coming Soon",
+    "date": "Date",
+    "poweredBy": "Powered by ©2026 Muktasyaf AnNamir",
+    "quote": "Quote"
   },
   "common": {
     "cancel": "Cancel",
     "confirm": "Confirm",
-    "close": "Close"
+    "close": "Close",
+    "loading": "Loading...",
+    "error": "Error",
+    "success": "Success"
   }
 }
