Checkpoint: Offline mode selesai: 1) Custom hook useOfflinePrayerTimes dengan AsyncStorage caching untuk prayer times. 2) Cache valid 7 hari, auto-fallback ke cached data kalau offline. 3) Offline indicator UI (yellow badge "Mod Luar Talian") dan sync status indicator (green badge "Data disegerakkan"). 4) Translation untuk offline mode messages (MS/EN). 5) 7 unit tests untuk offline functionality - semua passed. 6) 55 total tests passed. App kini fully functional offline dengan cached prayer times.

--- a/locales/en.json
+++ b/locales/en.json
@@ -46,5 +46,10 @@
     "loading": "Loading...",
     "error": "Error",
     "success": "Success"
+  },
+  "offline": {
+    "indicator": "Offline Mode",
+    "cached": "Using cached data",
+    "synced": "Data synced"
   }
 }
