Checkpoint: Fix English translation selesai: 1) Tab icon name "Jadual" → "Schedule" (prayerTimes.tabName). 2) "Berbuka/Maghrib" → "Iftar/Maghrib" (prayerTimes.iftar). 3) "Februari" → "February" di prayer times page (prayerTimes.month). 4) "Februari" → "February" di home page (home.month). 5) "Dibangunkan oleh" → "Developed by" (home.poweredBy). Semua translation keys sudah update di en.json dan ms.json. 55 unit tests passed. App kini fully correct English translation di semua pages.

--- a/locales/en.json
+++ b/locales/en.json
@@ -14,7 +14,9 @@
     "iftar": "Iftar/Maghrib",
     "state": "State",
     "zone": "Zone",
-    "day": "Day"
+    "day": "Day",
+    "month": "February",
+    "tabName": "Schedule"
   },
   "settings": {
     "title": "Settings",
@@ -36,7 +38,8 @@
   "home": {
     "title": "Ramadhan Coming Soon",
     "date": "Date",
-    "poweredBy": "Powered by ©2026 Muktasyaf AnNamir",
+    "month": "February",
+    "poweredBy": "Developed by ©2026 Muktasyaf AnNamir",
     "quote": "Quote"
   },
   "common": {
