Update translation files with latest content

--- a/locales/en.json
+++ b/locales/en.json
@@ -21,6 +21,8 @@
   "settings": {
     "title": "Settings",
     "darkMode": "Dark Mode",
+    "darkModeLabel": "Moon",
+    "lightModeLabel": "Sun",
     "language": "Language",
     "notification": "Suhoor & Iftar Notifications",
     "notificationStatus": "Enabled",
@@ -31,16 +33,25 @@
     "testNotification": "Test Notification",
     "about": "About Application",
     "aboutTitle": "About",
-    "aboutText": "This app provides a real-time countdown to the 1st of Ramadhan, showing days, hours, minutes, and seconds.\nIt also includes complete prayer times, including imsak and iftar, for all states and zones in Malaysia.\n\nNote: Prayer times are sourced from api.waktusolat.app, which uses JAKIM's Solat API data.",
+    "aboutText": "This app provides a real-time countdown to the 1st of Ramadhan, showing days, hours, minutes, and seconds.\nIt also includes complete prayer times, including imsak and iftar, for all states and zones in Malaysia.\n\nNote:\n* Prayer times are sourced from api.waktusolat.app, which uses Solat API data provided by JAKIM.\n* The date of 1 Ramadan in Malaysia is subject to the official announcement by the Keeper of the Rulers' Seal (PMRBR).",
     "exitApp": "Exit Application",
     "exitConfirm": "Are you sure you want to exit the application?",
     "shareApp": "Share This Application",
+    "seeMore": "See more",
+    "checkUpdates": "Check for Updates",
+    "checkingUpdates": "Checking for updates...",
+    "downloadingUpdate": "Downloading update...",
+    "installingUpdate": "Installing update...",
+    "updateAvailable": "Update available",
+    "updateNotAvailable": "You are already using the latest version",
+    "updateError": "Error checking for updates",
     "close": "Close"
   },
   "home": {
     "title": "Ramadhan Coming Soon",
     "date": "Date",
     "month": "February",
+    "homeTab": "Home",
     "poweredBy": "Developed by ©2026 Muktasyaf AnNamir",
     "quote": "Quote"
   },
