--- a/locales/ms.json
+++ b/locales/ms.json
@@ -21,6 +21,8 @@
   "settings": {
     "title": "Tetapan",
     "darkMode": "Mod Gelap",
+    "darkModeLabel": "Bulan",
+    "lightModeLabel": "Matahari",
     "language": "Bahasa",
     "notification": "Notifikasi Imsak & Berbuka",
     "notificationStatus": "Aktif",
@@ -30,17 +32,26 @@
     "notificationBefore": "Peringatan sebelum waktu:",
     "testNotification": "Uji Notifikasi",
     "about": "Tentang Aplikasi",
-    "aboutText": "Aplikasi ini memaparkan kiraan detik menuju 1 Ramadhan dalam hari, jam, minit, dan saat.\nIa turut menyediakan jadual waktu solat lengkap termasuk waktu imsak dan berbuka puasa untuk seluruh negeri dan zon di Malaysia.\n\nNota: Waktu solat diambil daripada api.waktusolat.app yang menggunakan data Solat API dari JAKIM.",
+    "aboutText": "Aplikasi ini memaparkan kiraan detik menuju 1 Ramadhan dalam hari, jam, minit, dan saat.\nIa turut menyediakan jadual waktu solat lengkap termasuk waktu imsak dan berbuka puasa untuk seluruh negeri dan zon di Malaysia.\n\nNota:\n* Waktu solat diambil daripada api.waktusolat.app yang menggunakan data Solat API dari JAKIM.\n* Tarikh 1 Ramadan di Malaysia adalah tertakluk kepada pengumuman rasmi Penyimpan Mohor Besar Raja-Raja (PMRBR).",
     "aboutTitle": "Tentang",
     "exitApp": "Keluar Aplikasi",
     "exitConfirm": "Anda yakin ingin keluar dari aplikasi?",
     "shareApp": "Kongsi Aplikasi Ini",
+    "seeMore": "Lihat",
+    "checkUpdates": "Semak Kemaskini",
+    "checkingUpdates": "Menyemak kemaskini...",
+    "downloadingUpdate": "Memuat turun kemaskini...",
+    "installingUpdate": "Memasang kemaskini...",
+    "updateAvailable": "Kemaskini tersedia",
+    "updateNotAvailable": "Anda sudah menggunakan versi terbaru",
+    "updateError": "Ralat semasa menyemak kemaskini",
     "close": "Tutup"
   },
   "home": {
     "title": "Ramadhan Akan Tiba",
     "date": "Tarikh",
     "month": "Februari",
+    "homeTab": "Utama",
     "poweredBy": "Dibangunkan oleh ©2026 Muktasyaf AnNamir",
     "quote": "Kata Hikmah"
   },
